--- a/index.html
+++ b/index.html
@@ -100,20 +100,19 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
+                            <h3 class="mb-0">UNC-Chapel Hill</h3>
+                            <div class="subheading mb-3">Full-Stack Web Development Coding Bootcamp</div>
                             <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">April 2021 - September 2021</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
+                            <h3 class="mb-0">Florida State College of Jacksonville</h3>
+                            <div class="subheading mb-3">BS in Biomedical Science</div>
+                            <p>GPA: 3.52</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">January 2016 - May 2018</span></div>
                     </div>
                 </div>
             </section>
